Feat: Add Patch to user
